--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@
                 <br>
                 <br>
                 <div class="home-text-buttons">
-                    <a>My Resume</a>
+                    <a href="assets/resume/ian destura- resume.docx" download>My Resume</a>
                     <div class="toogle-buttons">
                         <div class="toogle">
                             <div class="toogle-circle"></div>
